* BUG#9501 Avoid duplicate process_log when importing BPIJ
* BUG#9466 Handle SIRET with 99999999999999 in BPIJ file
* BUG#9451 Display explicit error when there is no subscription for a siren and ssn combination
* BUG#9461 Allow one day BPIJ period
* OTH#0000 Improve UI
* BUG#9381 Remove unused code: ij_subscriptions on party
* BUG#9381 Fix claim_ij_period order in wizard resulting in indemnification period initialization error
* BUG#9409 Fix new indemnification period button 
* BUG#9279 Fix coog build warnings
* OTH#0000 Send BPIJ chain parameter to batch
* OTH#0000 Change BPIJ order and fix crash in BPIJ treatement
* OTH#0000 Wrong creation of company suscription request once contract is terminated
* FEA#9010 Create periods from received files
* OTH#0000 Fix wrong declaration order of claimIJSubscription
* OTH#0000 Fix submit batch when no deductible are defined
* OTH#0000 Add missing translations and fix manual registration creation icon
* OTH#0000 Add ID in prestIJ request order
* FEA#9172 Add request group entry point and fix batchs
* OTH#0000 Fix file identifier computation
* FEA#9011 Handle covered subscriptions to the french prest IJ service
* OTH#0000 Encoding in iso-8859-1 rather than utf8
* FEA#9049 Add archiving, fixes and use siren (multiple companies per subscription)
* FEA#8862 Register legal entity to the prest ij service
* Module creation