@@ -1,3 +1,4 @@
+* BUG#9540 Gérer la recherche des BPIJ à partir du nom de la personne
 * BUG#9501 Ne pas générer de tâche en doublon lors de l'import de BPIJ
 * BUG#9466 Gérer la réception de BPIJ avec un SIRET à 99999999999999
 * BUG#9451 Affichage d'une erreur explicite lorsqu'une combinaison de SIREN et numéro de sécurtié sociale ne correspond à aucune inscription
