@@ -1,3 +1,4 @@
+* BUG#9540 Handle party search on rec_name in BPIJ
 * BUG#9501 Avoid duplicate process_log when importing BPIJ
 * BUG#9466 Handle SIRET with 99999999999999 in BPIJ file
 * BUG#9451 Display explicit error when there is no subscription for a siren and ssn combination
